<resources>
    <string name="app_name">Blood Connection</string>
    <string name="title_activity_maps">Blood Connection</string>
    <string name="title_activity_signin">SignIn</string>
    <string name="title_activity_myrequests">My Requests</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="bloodGroup">Blood Group:</string>
    <string name="kValue">Nearest Neighbors:</string>
    <string name="blood">Choose your BloodGroup</string>
    <string name="noacceptors_message">None of the users responded, please check back after some time.</string>
    <string-array name="bloodgroups">
        <item><b>Blood Group</b></item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="kVal">
        <item><b>Neighbors</b></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="loginlink">
        <u><b>Login</b></u>
    </string>

    <string name="registerlink">
        <u><b>Register</b></u>
    </string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_request_info">RequestInfo</string>
    <string name="title_activity_awaitingrequests">Awaiting Requests</string>
    <string name="noawaitingrequests">Currently, there are no awaiting requests to respond.</string>
    <string name="aboutus1">"Blood Connection", is a platform to connect the blood recipients with the donors. The main purpose of the
    application is to just connect them, and the proceedings after the connection is left to the users.</string>
    <string name="aboutus2"> The major challenges including the implementation  and privacy are covered in the documentation.</string>

</resources>
