<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mamanoha.bloodconnection.SigninActivity">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:maxLines="1"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editText1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:maxLines="1"
        android:maxLength="50"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/title_activity_signin"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/Registertext"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account yet?"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/link_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerlink"
        android:onClick="register"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:layout_below="@+id/Registertext"
        android:textColor="#000000"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
