<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.mamanoha.bloodconnection.RegistrationActivity">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="First Name"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstName"
            android:hint="Last Name"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastName"
            android:hint="@string/prompt_email"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:hint="Password"
            android:inputType="textPassword"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/confirmpasscode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:hint="Confirm the password"
            android:inputType="textPassword"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmpasscode"
            android:hint="Mobile Number"
            android:maxLines="1"
            android:maxLength="15"
            android:digits="0123456789+-()"
            android:selectAllOnFocus="true"
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/phone"
            android:orientation="vertical">
            <EditText
                android:id="@+id/dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Date of Birth"
                android:layout_marginTop="20dp"
                android:inputType="none"
                android:maxLines="1"
                android:selectAllOnFocus="true" />

            <Button
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/birthday_icon"
                android:onClick="showDatePickerDialog"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"/>
            <RadioGroup
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_below="@id/dob"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:id="@+id/gendergroup"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:onClick="onRadioButtonClicked"
                    />
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:onClick="onRadioButtonClicked"
                    />
                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Other"
                    android:onClick="onRadioButtonClicked"
                    />
            </RadioGroup>

            <Spinner
                android:id="@+id/bloodspinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gendergroup"
                android:layout_marginTop="20dp"
                android:entries="@array/bloodgroups"
                android:spinnerMode="dialog"
                android:prompt="@string/blood"
                >
            </Spinner>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/Register"
                android:layout_marginTop="15dp"
                android:text="Register"
                android:onClick="register"
                android:textColor="#000000"
                android:layout_below="@+id/bloodspinner"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logintext"
                android:layout_marginTop="10dp"
                android:text="Already have an account?"
                android:textColor="#000000"
                android:layout_below="@+id/Register"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginlink"
                android:layout_below="@+id/logintext"
                android:layout_centerHorizontal="true"
                android:text="@string/loginlink"
                android:textColor="#000000"
                />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>